# Liwanag

./: .env.example  .gitignore  README.md  biome.json  drizzle.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/admin/: page.tsx
app/(app)/campaigns/: page.tsx
app/(app)/stats/: page.tsx
app/api/campaigns/: route.ts
app/api/health/: route.ts
app/api/stats/: route.ts
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile
contracts/charity-campaign/: Cargo.toml
contracts/charity-campaign/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/charity-campaign/test_snapshots/test/: campaigns_are_isolated.1.json  close_campaign_blocks_new_donations_but_allows_disburse.1.json  disburse_by_non_organizer_fails.1.json  disburse_over_balance_fails.1.json  disburse_pays_recipient_and_appends_ledger.1.json  donate_locks_funds_and_tracks_totals.1.json  donate_to_closed_campaign_fails.1.json  donate_zero_amount_fails.1.json  double_initialize_fails.1.json  initialize_records_admin_and_token.1.json  multiple_donations_accumulate_distinct_donors.1.json  open_campaign_records_organizer_and_goal.1.json  open_campaign_zero_goal_fails.1.json  open_duplicate_campaign_fails.1.json
contracts/scripts/: deploy.sh
src/server/auth/: session.ts
src/server/config/: env.ts
src/server/db/: client.ts
src/server/lib/: money.ts
tests/: setup.ts
tests/e2e/: demo-video.spec.ts  prod-real.spec.ts
tests/server/: money.test.ts  sep10.test.ts
(+38 files in other folders)
